--- a/accescontrolsystem/templates/companies/create.html
+++ b/accescontrolsystem/templates/companies/create.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <form action="{% url 'users:register' %}" method="POST">
+    <form action="{% url 'companies:create' %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button  type="submit">Registrarse!</button>
