--- a/accescontrolsystem/templates/companies/manage.html
+++ b/accescontrolsystem/templates/companies/manage.html
@@ -7,15 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     {% if request.user.role == 'root' %}
-        <a href="{% url 'users:manage' %}">Manage users</a> <br>
-        <a href="{% url 'companies:manage' %}">Manage companies</a>
+        <a href="{% url 'companies:create' %}">Create Company</a> <br>
+        <a href="">View a Company</a> <br
+        <a href="">Update Company</a> <br>
+        <a href="">Delete Company</a> <br>
+        <a href="">List of companies</a> <br>
     {% else %}
         <p>
             Acces denied
         </p>
     {% endif %}
-
+    
 </body>
 </html>
