detail user view

--- a/accescontrolsystem/templates/users/detail.html
+++ b/accescontrolsystem/templates/users/detail.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    {{ object.name }}
+    {{ object.first_name }} <br>
+    {{ object.last_name }} <br>
+    {{ object.email }} <br>
+    {{ object.company }} <br>
+    {{ object.address }} <br>
+    {{ object.phone }} <br>
+    {{ object.country }} <br>
+    {{ object.state }} <br>
+    {{ object.city }} <br>
+    {{ object.role }} <br>
 </body>
 </html>
