Manage users and companies root

--- a/accescontrolsystem/templates/companies/detail.html
+++ b/accescontrolsystem/templates/companies/detail.html
@@ -7,16 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    {{ object.first_name }} <br>
-    {{ object.last_name }} <br>
-    {{ object.email }} <br>
-    {{ object.company }} <br>
+    {{ object.administrator }} <br>
+    {{ object.nit }} <br>
+    {{ object.name }} <br>
+    {{ object.commercial_address }} <br>
     {{ object.address }} <br>
     {{ object.phone }} <br>
     {{ object.country }} <br>
     {{ object.state }} <br>
     {{ object.city }} <br>
-    {{ object.role }} <br>
     {{ object.email }} <br>
+    {{ object.website }} <br>
 </body>
 </html>
