--- a/accescontrolsystem/templates/users/index_admin.html
+++ b/accescontrolsystem/templates/users/index_admin.html
@@ -11,5 +11,32 @@
     <a href="{% url 'companies:create_schedule' %}">Create Schedule for acces Point</a><br>
     <a href=""></a> <br>
 
+    {% for accespoint in accespoints %}
+
+            {{ accespoint.name }} <a href="{% url 'companies:detailaccespoint' accespoint.pk %}">Details</a> 
+            <a href="{% url 'companies:updateaccespoint' accespoint.pk %}">Update</a>
+            <a href="{% url 'companies:deleteaccespoint' accespoint.pk %}">Delete</a> 
+            <a href="">{{ accespoint.schedules_acces_point }}</a> 
+            
+    {% endfor %}
+
+    <div>
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
+
 </body>
 </html>
