--- a/accescontrolsystem/templates/users/login.html
+++ b/accescontrolsystem/templates/users/login.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form  method = "POST" action="{% url 'users:login' %}">
+{% extends 'base.html' %}
+{% block content %}
+
+
+    <div class="row justify-content-center">
+        <h1>Access Control </h1>
+    </div>
+
+    <div class="row justify-content-center">
+            <form  method = "POST" action="{% url 'users:login' %}">
+                
+                {% csrf_token %}
+                <input placeholder="Nombre de usuario" name="username"><br>
+                <input  placeholder="Contraseña" name="password"><br>
+                <button type="submit" class="btn btn-primary">Login</button>
+                
+            </form>
         
-        {% csrf_token %}
-        <input placeholder="Nombre de usuario" name="username">
-        <input  placeholder="Contraseña" name="password">
-        <button type="submit">Login</button>
-        
-    </form>
-</body>
-</html>
+    </div>
+{% endblock %}
