--- a/accescontrolsystem/templates/users/login.html
+++ b/accescontrolsystem/templates/users/login.html
@@ -12,7 +12,7 @@
                 {% csrf_token %}
                 <input placeholder="Nombre de usuario" name="username"><br>
                 <input  placeholder="Contraseña" name="password"><br>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn-primary">Login</button>
                 
             </form>
         
