--- a/accescontrolsystem/templates/users/create.html
+++ b/accescontrolsystem/templates/users/create.html
@@ -1,20 +1,20 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
-    <form action="{% url 'users:create' %}" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button  type="submit">Registrarse!</button>
-
-    </form>
+{% extends 'base.html' %}
+ {% block content %}
+    <div class="row justify-content-center">
+        <h1>Create a user</h1>
+    </div>
+    <div class="row justify-content-center">
+        
+        <form action="{% url 'users:create' %}" method="POST">
+            {% csrf_token %}
+            <table>
+                {{ form.as_table }}
+            </table>
+            <button  type="submit" class="btn-success">Registrarse!</button>
     
-</body>
-</html>
+        </form>
+        
+
+    </div>
+    
+ {% endblock %}
