table detail template

--- a/accescontrolsystem/templates/users/create.html
+++ b/accescontrolsystem/templates/users/create.html
@@ -10,7 +10,7 @@
             <table>
                 {{ form.as_table }}
             </table>
-            <button  type="submit" class="btn-success">Registrarse!</button>
+            <button  type="submit" class="btn-success">Registrar!</button>
     
         </form>
         
