--- a/accescontrolsystem/templates/users/detail.html
+++ b/accescontrolsystem/templates/users/detail.html
@@ -1,22 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {{ object.first_name }} <br>
-    {{ object.last_name }} <br>
-    {{ object.email }} <br>
-    {{ object.company }} <br>
-    {{ object.address }} <br>
-    {{ object.phone }} <br>
-    {{ object.country }} <br>
-    {{ object.state }} <br>
-    {{ object.city }} <br>
-    {{ object.role }} <br>
-    {{ object.email }} <br>
-</body>
-</html>
+
+{% extends 'base.html' %}
+{% block content %}
+    
+    <style>
+        table, th, td {
+            border:1px solid black;
+          }
+    </style>
+    
+    <div class="row justify-content-center">
+        <h1>Details Company</h1>
+    </div>
+    <div class="row justify-content-center">
+    
+        <table style="width:50%">
+            <tr>
+                <th>Item</th>
+                <th>Detail</th>
+            </tr>
+            <tr>
+              <td>First Name</td>
+              <td>{{ object.first_name }}</td>
+            </tr>
+            <tr>
+                <td>Last Name</td>
+                <td>{{ object.last_name }}</td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td>{{ object.email }}</td>
+            </tr>
+            <tr>
+                <td>Company</td>
+                <td>{{ object.company }}</td>
+            </tr>
+            <tr>
+                <td>Address</td>
+                <td>{{ object.address }}</td>
+            </tr>
+            <tr>
+                <td>Phone</td>
+                <td>{{ object.phone }}</td>
+            </tr>
+            <tr>
+                <td>Country</td>
+                <td>{{ object.country }}</td>
+            </tr>
+            <tr>
+                <td>State</td>
+                <td>{{ object.state }}</td>
+            </tr>
+            <tr>
+                <td>City</td>
+                <td>{{ object.city }}</td>
+            </tr>
+    
+            <tr>
+                <td>Email</td>
+                <td>{{ object.email }}</td>
+            </tr>
+            <tr>
+                <td>Role</td>
+                <td>{{ object.role }}</td>
+            </tr>
+    
+          </table>
+    
+    </div>
+        
+{% endblock %}
+    
+    
