--- a/accescontrolsystem/templates/base.html
+++ b/accescontrolsystem/templates/base.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="container-fluid m-5">
+    <div class="container-fluid">
         {% block content %}
             
         {% endblock %}
