--- a/accescontrolsystem/templates/acces_points/update.html
+++ b/accescontrolsystem/templates/acces_points/update.html
@@ -11,7 +11,7 @@
 
                 {{ form.as_table }}
             </table>
-            <button  type="submit" value="save">Actualizar</button>
+            <button  type="submit" value="save" class="btn-success">Update</button>
     
         </form>
     </div>
