--- a/accescontrolsystem/templates/schedules/update.html
+++ b/accescontrolsystem/templates/schedules/update.html
@@ -1,20 +1,20 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+    <div class="row justify-content-center">
+        <h1>Update Schedule</h1>
+    </div>
+    <div class="row justify-content-center">
+        <form method="POST">
+            {% csrf_token %}
+            <table>
 
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button  type="submit" value="save">Actualizar</button>
+                {{ form.as_table }}
+            </table>
+            <button  type="submit" value="save" class="btn-success">Update</button>
+    
+        </form>
+    </div>
+    
+{% endblock %}
 
-    </form>
-
-</body>
-</html>
+    
