--- a/accescontrolsystem/templates/acces_points/detail.html
+++ b/accescontrolsystem/templates/acces_points/detail.html
@@ -1,17 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {{ object.name }} <br>
-    {{ object.address }} <br>
-    {{ object.email }} <br>
-    {{ object.geolocation}} <br>
-    {{ object.is_active }} <br>
+{% extends 'base.html' %}
+{% block content %}
+    <style>
+        table, th, td {
+            border:1px solid black;
+        }
+    </style>
+    <div class="row justify-content-center">
+        <h1>Details Acces Point</h1>
+    </div>
+    <div class="row justify-content-center">
 
-</body>
-</html>
+        <table style="width:50%">
+            <tr>
+                <th>Item</th>
+                <th>Detail</th>
+            </tr>
+            <tr>
+                <td>Name</td>
+                <td>{{ object.name }}</td>
+            </tr>
+            
+            <tr>
+                <td>Address</td>
+                <td>{{ object.address }}</td>
+            </tr>
+            <tr>
+                <td>Geolocation</td>
+                <td>{{ object.geolocation }}</td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td>{{ object.email }}</td>
+            </tr>
+            <tr>
+                <td>Is active</td>
+                <td>{{ object.is_active }}</td>
+            </tr>
+        </table>
+    </div>
+  
+    
+{% endblock %}
+
