--- a/accescontrolsystem/templates/schedules/create.html
+++ b/accescontrolsystem/templates/schedules/create.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row justify-content-center">
         
-        <form action="{% url 'companies:create_schedule' %}" method="POST">
+        <form action="{% url 'users:indexadministrator'  %}" method="POST">
             <p>Time Format : 'hh:mm:ss'</p> 
             {% csrf_token %}
             <table>
