--- a/accescontrolsystem/templates/companies/schedule_confirm_delete.html
+++ b/accescontrolsystem/templates/companies/schedule_confirm_delete.html
@@ -1,16 +1,12 @@
+{% extends 'base.html' %}
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="" method="post">{% csrf_token %}
-        <h3>Are you sure you want delete to "{{ object }}"?</h3>
-        <input class='btn btn-danger' type="submit" value="Confirm"/>
-    </form>
-</body>
-</html>
+    <div class="row justify-content-center">
+        <form action="" method="post">{% csrf_token %}
+            <h3>Are you sure you want delete to "{{ object }}"?</h3>
+            <input class='btn btn-danger' type="submit" value="Confirm"/>
+        </form>
+    </div>
+
+    
+{% endblock %}
