--- a/accescontrolsystem/templates/users/index_admin.html
+++ b/accescontrolsystem/templates/users/index_admin.html
@@ -3,11 +3,13 @@
 {% block content %}
     
     <div class="row justify-content-center">
-        <h1>Administrator menu</h1>
+        <h1>Administrator menu {{ accespoints.company }}</h1>
     </div>
 
     <div class="row justify-content-center">
-        <button type="button" class="btn btn-light"><a href="{% url 'companies:create_acces_point' %}">Create acces Point</a><br></button>
+        <button type="button" class="btn btn-light"><a href="{% url 'companies:create_acces_point' %}">Create acces Point</a></button>
+        <button type="button" class="btn btn-light"><a href="{% url 'companies:create_invitation' company.pk %}">Invite someone</a></button>
+        <button type="button" class="btn btn-light"><a href="{% url 'companies:invitations_list' company.pk %}">Invitations List</a></button>
     </div>
     
     <br>
