Send pin via email implemented

--- a/accescontrolsystem/templates/emails/invitation.html
+++ b/accescontrolsystem/templates/emails/invitation.html
@@ -13,7 +13,7 @@
         Hello.
     </p>
     <p>
-        The company {{ company }} wants you to be part of it, go and register here url
+        The company {{ company }} wants you to be part of it, your pin is {{ pin }} go and register here url
     </p>
 
 </body>
