--- a/accescontrolsystem/templates/users/login.html
+++ b/accescontrolsystem/templates/users/login.html
@@ -10,7 +10,7 @@
             <form  method = "POST" action="{% url 'users:login' %}">
                 
                 {% csrf_token %}
-                <input placeholder="Username" name="username"><br><br>
+                <input placeholder="Email" name="username"><br><br>
                 <input  placeholder="Password" name="password" type="password"><br><br>
                 <button type="submit" class="btn-primary">Login</button>
                 
