--- a/accescontrolsystem/templates/acces_points/detail.html
+++ b/accescontrolsystem/templates/acces_points/detail.html
@@ -1,43 +1,54 @@
 {% extends 'base.html' %}
 {% block content %}
-    <style>
-        table, th, td {
-            border:1px solid black;
-        }
-    </style>
-    <div class="row justify-content-center">
-        <h1>Details Acces Point</h1>
-    </div>
-    <div class="row justify-content-center">
+    {% if request.user.role == 'administrator' %}
+        <style>
+            table, th, td {
+                border:1px solid black;
+            }
+        </style>
+        <div class="row justify-content-center">
+            <h1>Details Acces Point</h1>
+        </div>
+        <div class="row justify-content-center">
 
-        <table style="width:50%">
-            <tr>
-                <th>Item</th>
-                <th>Detail</th>
-            </tr>
-            <tr>
-                <td>Name</td>
-                <td>{{ object.name }}</td>
-            </tr>
-            
-            <tr>
-                <td>Address</td>
-                <td>{{ object.address }}</td>
-            </tr>
-            <tr>
-                <td>Geolocation</td>
-                <td>{{ object.geolocation }}</td>
-            </tr>
-            <tr>
-                <td>Email</td>
-                <td>{{ object.email }}</td>
-            </tr>
-            <tr>
-                <td>Is active</td>
-                <td>{{ object.is_active }}</td>
-            </tr>
-        </table>
-    </div>
+            <table style="width:50%">
+                <tr>
+                    <th>Item</th>
+                    <th>Detail</th>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td>{{ object.name }}</td>
+                </tr>
+                <tr>
+                    <td>Id</td>
+                    <td>{{ object.pk }}</td>
+                </tr>
+                
+                <tr>
+                    <td>Address</td>
+                    <td>{{ object.address }}</td>
+                </tr>
+                <tr>
+                    <td>Geolocation</td>
+                    <td>{{ object.geolocation }}</td>
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td>{{ object.email }}</td>
+                </tr>
+                <tr>
+                    <td>Is active</td>
+                    <td>{{ object.is_active }}</td>
+                </tr>
+            </table>
+        </div>
+
+    {% else %}
+        <p>You dont have permission</p>
+    {% endif %}
+
+    
   
     
 {% endblock %}
