--- a/accescontrolsystem/templates/companies/create.html
+++ b/accescontrolsystem/templates/companies/create.html
@@ -1,20 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
+    {% if request.user.role == 'root' %}
+        <div class="row justify-content-center">
+            <h1>Create a Company</h1>
+        </div>
+
+        <div class="row justify-content-center">
+            <form action="{% url 'companies:create' %}" method="POST">
+                {% csrf_token %}
+                <table>
+                    {{ form.as_table }}
+
+                </table>
+                <button  type="submit" class="btn-success">Registrar!</button>
+
+            </form>
+        </div>
+    {% else %}
+        <p>
+            You dont have permission
+        </p>
+    {% endif %}
     
-    <div class="row justify-content-center">
-        <h1>Create a Company</h1>
-    </div>
-
-    <div class="row justify-content-center">
-        <form action="{% url 'companies:create' %}" method="POST">
-            {% csrf_token %}
-            <table>
-                {{ form.as_table }}
-
-            </table>
-            <button  type="submit" class="btn-success">Registrar!</button>
-
-        </form>
-    </div>
 {% endblock %}
     
