--- a/accescontrolsystem/templates/companies/detail.html
+++ b/accescontrolsystem/templates/companies/detail.html
@@ -1,72 +1,79 @@
 
 {% extends 'base.html' %}
 {% block content %}
+    {% if request.user.role == 'root' %}
+        <style>
+            table, th, td {
+                border:1px solid black;
+            }
+        </style>
+        
+        <div class="row justify-content-center">
+            <h1>Details Company</h1>
+        </div>
+        <div class="row justify-content-center">
+        
+            <table style="width:50%">
+                <tr>
+                    <th>Item</th>
+                    <th>Detail</th>
+                </tr>
+                <tr>
+                <td>Administrator</td>
+                <td>{{ object.administrator }}</td>
+                </tr>
+                <tr>
+                    <td>Nit</td>
+                    <td>{{ object.nit }}</td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td>{{ object.name }}</td>
+                </tr>
+                <tr>
+                    <td>Commercial Address</td>
+                    <td>{{ object.commercial_address }}</td>
+                </tr>
+                <tr>
+                    <td>Address</td>
+                    <td>{{ object.address }}</td>
+                </tr>
+                <tr>
+                    <td>Phone</td>
+                    <td>{{ object.phone }}</td>
+                </tr>
+                <tr>
+                    <td>Country</td>
+                    <td>{{ object.country }}</td>
+                </tr>
+                <tr>
+                    <td>State</td>
+                    <td>{{ object.state }}</td>
+                </tr>
+                <tr>
+                    <td>City</td>
+                    <td>{{ object.city }}</td>
+                </tr>
+        
+                <tr>
+                    <td>Email</td>
+                    <td>{{ object.email }}</td>
+                </tr>
+                <tr>
+                    <td>Website</td>
+                    <td>{{ object.website }}</td>
+                </tr>
+        
+            </table>
+        
+        </div>
+        
+    {% else %}
+    <p>
+        You dont have access
+    </p>
+    {% endif %}
 
-<style>
-    table, th, td {
-        border:1px solid black;
-      }
-</style>
 
-<div class="row justify-content-center">
-    <h1>Details Company</h1>
-</div>
-<div class="row justify-content-center">
-
-    <table style="width:50%">
-        <tr>
-            <th>Item</th>
-            <th>Detail</th>
-        </tr>
-        <tr>
-          <td>Administrator</td>
-          <td>{{ object.administrator }}</td>
-        </tr>
-        <tr>
-            <td>Nit</td>
-            <td>{{ object.nit }}</td>
-        </tr>
-        <tr>
-            <td>Name</td>
-            <td>{{ object.name }}</td>
-        </tr>
-        <tr>
-            <td>Commercial Address</td>
-            <td>{{ object.commercial_address }}</td>
-        </tr>
-        <tr>
-            <td>Address</td>
-            <td>{{ object.address }}</td>
-        </tr>
-        <tr>
-            <td>Phone</td>
-            <td>{{ object.phone }}</td>
-        </tr>
-        <tr>
-            <td>Country</td>
-            <td>{{ object.country }}</td>
-        </tr>
-        <tr>
-            <td>State</td>
-            <td>{{ object.state }}</td>
-        </tr>
-        <tr>
-            <td>City</td>
-            <td>{{ object.city }}</td>
-        </tr>
-
-        <tr>
-            <td>Email</td>
-            <td>{{ object.email }}</td>
-        </tr>
-        <tr>
-            <td>Website</td>
-            <td>{{ object.website }}</td>
-        </tr>
-
-      </table>
-
-</div>
-    
 {% endblock %}
 
