--- a/accescontrolsystem/templates/companies/update.html
+++ b/accescontrolsystem/templates/companies/update.html
@@ -1,18 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="row justify-content-center">
-        <h1>Update a Company</h1>
-    </div>
+    {% if request.user.role == 'root' %}
         <div class="row justify-content-center">
-            <form method="POST">
-                {% csrf_token %}
-                <table>
-                    {{ form.as_table }}
-                </table>
-                <button  type="submit" value="save" class="btn-success">Update</button>
-            </form>
+            <h1>Update a Company</h1>
         </div>
-    </div>
+            <div class="row justify-content-center">
+                <form method="POST">
+                    {% csrf_token %}
+                    <table>
+                        {{ form.as_table }}
+                    </table>
+                    <button  type="submit" value="save" class="btn-success">Update</button>
+                </form>
+            </div>
+        </div>
+    {% else %}
+    <p>
+        You dont have permission
+    </p>
+    {% endif %}
+    
     
 {% endblock %}
     
