--- a/accescontrolsystem/templates/invitations/list.html
+++ b/accescontrolsystem/templates/invitations/list.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    <style>
-        table, th, td {
-            border:1px solid black;
-        }
-    </style>
+    {% if request.user.role == 'adminsitrator' %}
+       
+        <style>
+            table, th, td {
+                border:1px solid black;
+            }
+        </style>
         <div class="row justify-content-center">
             <h1>List of invitations</h1>
         </div>
@@ -14,15 +15,20 @@
         <div class="row justify-content-center">
             <table style="width:50%">
                 {% for invitation in invitations %}
-                            <tr>
-                                <th>{{ invitation.email }}</th>
-                                <td><a href="{% url 'companies:delete_invitation' invitation.pk %}" class="btn-light">Delete</a> </td>
-                            </tr>
-                            
-                            
-                            
+                    <tr>
+                        <th>{{ invitation.email }}</th>
+                        <td><a href="{% url 'companies:delete_invitation' invitation.pk %}" class="btn-light">Delete</a> </td>
+                    </tr>
+                             
                 {% endfor %}
             </table>
         </div>
+    {% else %}
+        <p>
+            You dont have permission
+        </p>
+    {% endif %}
+
+    
 
 {% endblock %}
