--- a/accescontrolsystem/templates/schedules/create.html
+++ b/accescontrolsystem/templates/schedules/create.html
@@ -1,19 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="row justify-content-center">
-        <h1>Create schedule</h1>
-    </div>
-    <div class="row justify-content-center">
+    {% if request.user.role == 'adminsitrator' %}
+      
+        <div class="row justify-content-center">
+            <h1>Create schedule</h1>
+        </div>
+        <div class="row justify-content-center">
+            
+            <form method="POST">
+                <p>Time Format : 'hh:mm:ss'</p> 
+                {% csrf_token %}
+                <table>
+                    {{ form.as_table }}
+                </table>
+                <button  type="submit" class="btn-success">Register!</button>
         
-        <form method="POST">
-            <p>Time Format : 'hh:mm:ss'</p> 
-            {% csrf_token %}
-            <table>
-                {{ form.as_table }}
-            </table>
-            <button  type="submit" class="btn-success">Register!</button>
+            </form>
+        </div>      
+    {% else %}
+        <p>
+            You dont have permission
+        </p>
+    {% endif %}
     
-        </form>
-    </div>      
     
 {% endblock %}
