--- a/accescontrolsystem/templates/schedules/update.html
+++ b/accescontrolsystem/templates/schedules/update.html
@@ -1,19 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="row justify-content-center">
-        <h1>Update Schedule</h1>
-    </div>
-    <div class="row justify-content-center">
-        <form method="POST">
-            {% csrf_token %}
-            <table>
+    {% if request.user.role == 'adminsitrator' %}
+        <div class="row justify-content-center">
+            <h1>Update Schedule</h1>
+        </div>
+        <div class="row justify-content-center">
+            <form method="POST">
+                {% csrf_token %}
+                <table>
 
-                {{ form.as_table }}
-            </table>
-            <button  type="submit" value="save" class="btn-success">Update</button>
+                    {{ form.as_table }}
+                </table>
+                <button  type="submit" value="save" class="btn-success">Update</button>
+        
+            </form>
+        </div>
+    {% else %}
+        <p>
+            You dont have permission
+        </p>
+    {% endif %}
     
-        </form>
-    </div>
     
 {% endblock %}
 
