Fixing bug adminsitrator in templates

--- a/accescontrolsystem/templates/schedules/detail.html
+++ b/accescontrolsystem/templates/schedules/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% if request.user.role == 'adminsitrator' %}
+    {% if request.user.role == 'administrator' %}
         {{ object.user}} <br>
         {{ object.start_time }} <br>
         {{ object.ending_time }} <br>
