--- a/accescontrolsystem/templates/schedules/create.html
+++ b/accescontrolsystem/templates/schedules/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% if request.user.role == 'adminsitrator' %}
+    {% if request.user.role == 'administrator' %}
       
         <div class="row justify-content-center">
             <h1>Create schedule</h1>
